--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "koa-routeify",
-  "version": "1.0.5",
+  "name": "meow-routeify",
+  "version": "0.0.1",
   "description": "koa router ",
   "main": "index.js",
   "repository": {
